--- a/ConsoleAppForSHA256/ConsoleAppForSHA256.csproj
+++ b/ConsoleAppForSHA256/ConsoleAppForSHA256.csproj
@@ -166,7 +166,8 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
-    <Content Include="Res\2022-11-12 00-05-09.mkv" />
+    <Content Include="Res\авторизация.mkv" />
+    <Content Include="Res\консоль.mkv" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
